2024-06-29T01:00:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9720303389 # 341
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-29
* notice: last 14d: unq all: 9 12
* notice: prev accum: outdated-unq outdated-all / unq all: 937 1691 / 949 1704
* notice: next accum: outdated-unq outdated-all / unq all: 938 1692 / 949 1704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-15] / []

2024-06-26T01:01:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9671815780 # 338
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-26
* notice: last 14d: unq all: 9 13
* notice: prev accum: outdated-unq outdated-all / unq all: 937 1691 / 947 1702
* notice: next accum: outdated-unq outdated-all / unq all: 937 1691 / 949 1704
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-06-25]

2024-06-21T01:00:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9606567634 # 333
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-21
* notice: last 14d: unq all: 7 11
* notice: prev accum: outdated-unq outdated-all / unq all: 937 1691 / 945 1699
* notice: next accum: outdated-unq outdated-all / unq all: 937 1691 / 947 1702
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-06-20]

2024-06-20T00:59:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9589947898 # 332