@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2024-06-29T01:00:14Z",
-  "count_outdated" : 1692,
-  "uniques_outdated" : 938,
+  "timestamp" : "2024-07-02T01:01:53Z",
+  "count_outdated" : 1697,
+  "uniques_outdated" : 943,
   "count" : 1704,
   "uniques" : 949,
   "clones" : [
-    {
-      "timestamp": "2024-06-17T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
-      "timestamp": "2024-06-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-06-19T00:00:00Z",
       "count": 2,
