@@ -1,17 +1,7 @@
 {
-  "count": 12,
-  "uniques": 9,
+  "count": 7,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2024-06-17T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
-    {
-      "timestamp": "2024-06-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-06-19T00:00:00Z",
       "count": 2,
